[TASK] Move documentation to reST
Resolves: #69940
Releases: 2.0
Change-Id: I9384d246768948ae9a9b3e9bd3600f5ae12c8ff2
Reviewed-on: http://review.typo3.org/43597
Reviewed-by: Francois Suter <francois@typo3.org>
Tested-by: Francois Suter <francois@typo3.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Verified compatibility with TYPO3 CMS 7, resolves #69939
 	* Added reference to description field, resolves #70133
+	* Moved documentation to reST, resolves #69940
 
 2014-05-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
