[TASK] Apply PSR-2
Resolves: #75892
Releases: 2.0
Change-Id: Id38aec64587731677528a4f8d415b5cb58145349
Reviewed-on: https://review.typo3.org/47882
Reviewed-by: Francois Suter <francois@typo3.org>
Tested-by: Francois Suter <francois@typo3.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2016-04-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added composer manifest, resolves #75891
+	* Reformatted code according to PSR-2, resolves #75892
 
 2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
