--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Added composer manifest, resolves #75891
 	* Reformatted code according to PSR-2, resolves #75892
+	* Cleaned up code, resolves #75893
 
 2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
