[TASK] Release version 2.0.0
Resolves: #75895
Releases: 2.0
Change-Id: I48d7c32f2b7ffd7f4661ce1483ba59c5ccbb3f35
Reviewed-on: https://review.typo3.org/47885
Reviewed-by: Francois Suter <francois@typo3.org>
Tested-by: Francois Suter <francois@typo3.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* Reformatted code according to PSR-2, resolves #75892
 	* Cleaned up code, resolves #75893
 	* Moved language files to XLIFF, resolves #75894
+	* Released to TER as version 2.0.0, resolves #58679
 
 2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
